# enigma2-openpli-fulan

./: .gitignore  Navigation.py  RecordTimer.py  ServiceReference.py  configure.ac  keyids.py  mytest.py  skin.py  translate.py
data/: Makefile.am  keymap.xml  menu.xml  rcpositions.xml  setup.xml  skin_default.xml  skin_display.xml  skin_display_default.xml  skin_display_vusolo4k.xml  startwizard.xml  timezone.xml
data/Magic/: Makefile.am  skin.xml
data/Magic/border/: Makefile.am
data/Magic/buttons/: Makefile.am
data/Magic/dvr/: Makefile.am
data/Magic/infobar/: Makefile.am
data/Magic/logos/: Makefile.am
data/Magic/menu/: Makefile.am
data/Magic/window/: Makefile.am
data/dTV-HD-Reloaded/: Makefile.am  skin.xml
data/dTV-HD-Reloaded/buttons/: Makefile.am
data/dTV-HD-Reloaded/extensions/: Makefile.am
data/dTV-HD-Reloaded/icons/: Makefile.am
data/dTV-HD-Reloaded/menu/: Makefile.am
data/dTV-HD-Reloaded/skin_default/: Makefile.am
data/dTV-HD-Reloaded/skin_default/icons/: Makefile.am
data/defaults/Dream/: Makefile.am  spark.info  spark7162.info
data/fonts/: Makefile.am
data/rc_models/: Makefile.am  rc_models.cfg  spark.xml
data/rc_models/spark/: Makefile.am  rcpositions.xml
data/skin_default/: Makefile.am
data/skin_default/spinner/: Makefile.am
lib/: Makefile.am
lib/base/: Makefile.inc  circularbuffer.cpp  console.cpp  ebase.cpp  eerror.cpp  eerror.h  encoding.cpp  estring.cpp  estring.h  etpm.cpp  filepush.cpp  filepush.h  freesatv2.cpp  httpstream.cpp  httpstream.h  ioprio.cpp  nconfig.h  object.h  rawfile.cpp  rawfile.h  ringbuffer.cpp  ringbuffer.h  socketbase.cpp  socketbase.h  wrappers.cpp  wrappers.h
lib/components/: scan.cpp
lib/driver/: Makefile.inc  hdmi_cec.cpp  rc.cpp  rcinput.cpp  vfd.cpp  vfd.h
lib/dvb/: cablescan.cpp  db.cpp  decoder.cpp  decoder.h  demux.cpp  dvb.cpp  dvb.h  dvbtime.cpp  dvbtime.h  epgcache.cpp  epgcache.h  fastscan.cpp  filepush.cpp  filepush.h  frontend.cpp  frontend.h  frontendparms.cpp  frontendparms.h  idvb.h  pmt.cpp  pmt.h  scan.cpp  sec.cpp  teletext.cpp  teletext.h  tstools.cpp  volume.cpp  volume.h
lib/dvb_ci/: dvbci.cpp  dvbci.h  dvbci_appmgr.cpp  dvbci_camgr.cpp  dvbci_datetimemgr.cpp  dvbci_mmi.cpp  dvbci_resmgr.cpp  dvbci_session.cpp  dvbci_ui.cpp
lib/gdi/: Makefile.inc  accel.cpp  accel.h  epng.cpp  fb.cpp  fb.h  font.cpp  gfbdc.cpp  glcddc.cpp  glcddc.h  gpixmap.cpp  lcd.cpp  lcd.h  picexif.cpp  picload.cpp  region.cpp  stmfb.cpp
lib/gui/: eslider.h  ewidget.cpp
lib/network/: socket.cpp  socket.h  xmlrpc.cpp
lib/python/: Makefile.inc  enigma_py_patcher.py  enigma_python.i  python_helpers.cpp
lib/python/Components/: AVSwitch.py  About.py  ChoiceList.py  DreamInfoHandler.py  EpgList.py  FileList.py  Harddisk.py  HdmiCec.py  Input.py  InputDevice.py  InputHotplug.py  Ipkg.py  Keyboard.py  Language.py  Makefile.am  MovieList.py  Network.py  NimManager.py  PackageInfo.py  ParentalControl.py  Playlist.py  PluginList.py  RcModel.py  Scanner.py  ScrollLabel.py  ServiceList.py  ServicePosition.py  ServiceScan.py  SystemInfo.py  TuneTest.py  (+5 more)
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CuberevoVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/CutListEditor/: keymap.xml
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py  settings.py
lib/python/Plugins/Extensions/ModemSettings/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/ModemSettings/icons/: Makefile.am
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/QuickEPG/: Makefile.am  plugin.py  quick_epg.sh
lib/python/Plugins/Extensions/SparkVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/TopfieldVFD/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AutoVolume/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/AutoVolume/meta/: Makefile.am  plugin_autovolume.xml
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/KeymapManager/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/KeymapManager/meta/: Makefile.am  plugin_keymapmanager.xml
lib/python/Plugins/SystemPlugins/NetworkBrowser/: AutoMount.py  Makefile.am  MountEdit.py  MountManager.py  MountView.py  NetworkBrowser.py  UserDialog.py  UserManager.py  getips.sh  getname
lib/python/Plugins/SystemPlugins/NetworkBrowser/icons/: Makefile.am
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/OnErrorRestartService/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SkinSelector/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/meta/: Makefile.am  plugin_vfd-icons.xml
lib/python/Plugins/SystemPlugins/VideoClippingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoTune/: VideoFinetune.py
lib/python/Plugins/SystemPlugins/Videomode/: Makefile.am  VideoHardware.py  plugin.py
lib/service/: Makefile.inc  listboxservice.h  m3u8.cpp  m3u8.h  service.cpp  servicedvb.cpp  servicedvbrecord.cpp  servicedvd.cpp  servicelibpl.cpp  servicelibpl.h  servicem2ts.cpp  servicemp3.cpp  servicemp3.h
m4/: ax_python_devel.m4
main/: Makefile.am  Makefile.am.orig  bsod.cpp  enigma.cpp  enigma.cpp.orig  version_info.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  xml2po.py
tests/: enigma.py
tools/: convert_argb_png.c  enigma2.sh.in
(+70 files in other folders)
