SUBDIRS = buttons extensions icons menu skin_default 

installdir = $(pkgdatadir)/dTV-HD-Reloaded

dist_install_DATA = \
	bs_bl.png \
	bs_b.png \
	bs_br.png \
	bs_l.png \
	bs_r.png \
	bs_tl.png \
	bs_t.png \
	bs_tr.png \
	button300.png \
	button400.png \
	button.png \
	cover.png \
	end.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	h-white.png \
	ico_crypt_off.png \
	ico_crypt_on.png \
	ico_dolby_off.png \
	ico_dolby_on.png \
	ico_format_off.png \
	ico_format_on.png \
	ico_hd_off.png \
	ico_hd_on.png \
	ico_mp_forward.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_rewind.png \
	ico_rec_on.png \
	ico_txt_off.png \
	ico_txt_on.png \
	infobar_movie.png \
	infobar.png \
	infobar_radio.png \
	mp_buttons.png \
	mpslider2.png \
	mpslider.png \
	muteback.png \
	no_coverArt.png \
	picon_default.png \
	pointer.png \
	prev.png \
	progress_big.png \
	progress.png \
	skin.xml \
	slider_back.png \
	slider.png \
	snr.png \
	text.png \
	timeline-now.png \
	timeline.png \
	volback.png \
	vol.png \
	v-white.png \
	white.png \
