installdir = $(pkgdatadir)/Magic/infobar

dist_install_DATA = \
	ico_crypt_on.png \
	ico_dolby_on.png \
	ico_epg_on.png \
	ico_format_on.png \
	ico_sub_on.png \
	ico_txt_on.png \
	infobar.png \
	mute.png \
	nimA.png \
	nimB.png \
	nimC.png \
	nimD.png \
	p_bar.png \
	rec.png \
	volumeslider_bar.png \
	volumeslider.png