installdir = $(pkgdatadir)/Magic/window

dist_install_DATA = \
	chan_p_bar.png \
	input_error.png \
	input_info.png \
	input_question.png \
	links.png \
	oben_links.png \
	oben.png \
	oben_rechts.png \
	rechts.png \
	timeline-now.png \
	timeline.png \
	unten_links.png \
	unten.png \
	unten_rechts.png