installdir = $(pkgdatadir)/dTV-HD-Reloaded/icons

dist_install_DATA = \
	ci.png \
	default.png \
	devices.png \
	dvd.png \
	google.png \
	hdd.png \
	info.png \
	keyb.png \
	kerni.png \
	look.png \
	media.png \
	movie.png \
	net.png \
	plugin.png \
	power.png \
	rass_logo.png \
	reset.png \
	scart.png \
	search.png \
	setup.png \
	sub.png \
	swm.png \
	timer.png \
	tuner.png \
	wlan.png
