installdir = $(pkgdatadir)/dTV-HD-Reloaded/icons

dist_install_DATA = \
	ask.png \
	az.png \
	ci.png \
	faz.png \
	fza.png \
	default.png \
	devices.png \
	dvd.png \
	google.png \
	hdd.png \
	info.png \
	keyb.png \
	kerni.png \
	look.png \
	loop.png \
	media.png \
	movie.png \
	movielist.png \
	net.png \
	newtop.png \
	oldtop.png \
	pause.png \
	playlist.png \
	playlistquit.png \
	plugin.png \
	power.png \
	quit.png \
	rass_logo.png \
	rep.png \
	reset.png \
	scart.png \
	search.png \
	setup.png \
	shuffle.png \
	sub.png \
	swm.png \
	timer.png \
	tuner.png \
	za.png \
	wlan.png
