installdir = $(pkgdatadir)/dTV-HD-Reloaded/menu

dist_install_DATA = \
	back1080.png \
	db.png \
	menuback2.png \
	menuback.png \
	select1080_100_bg.png \
	select1080_100.png \
	select1080_110.png \
	select1080_25.png \
	select1080_28.png \
	select1080_30.png \
	select1080_35.png \
	select1080_60.png \
	select1080_70.png \
	select1100_30.png \
	select300_45black.png \
	select300_45.png \
	select340_45.png \
	select400_45.png \
	select430_45.png \
	select600_50.png \
	select700_35.png \
	select700_40.png \
	select700_45.png \
	select700_80.png \
	select750_38.png \
	select780_22.png \
	select780_23.png \
	select780_30.png \
	select780_75.png \
	select800_50.png \
	select_jb.png \
	sep1080.png \
	sep1200.png \
	sep450.png \
	sep610.png \
	sep750.png
