installdir = $(pkglibdir)/python/Plugins/SystemPlugins/NetworkBrowser

SUBDIRS = icons

install_PYTHON =	\
	AutoMount.py \
	MountEdit.py \
	MountManager.py \
	MountView.py \
	NetworkBrowser.py \
	UserDialog.py \
	UserManager.py \
	plugin.py
	
install_SCRIPTS = \
	getips.sh

dist_install_DATA = \
	LICENSE \
	maintainer.info \
	getname \
	netscan.so
